--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://identitytoolkit.googleapis.com" />
     <link rel="preconnect" href="https://firestore.googleapis.com" />
     <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="preload" href="styles.css" as="style" />
+    <link rel="preload" href="main.js" as="script" />
     <meta name="theme-color" content="#109279" />
   </head>
   <body>
